# IOOP-Project

./: .gitignore  CMakeLists.txt  LICENSE  build.ps1  build.sh  contribution.txt  manageremployee.cpp  overview.cpp  readme.md
Dependencies/win/include/ftxui/component/: animation.hpp  captured_mouse.hpp  component.hpp  component_base.hpp  component_options.hpp  event.hpp  loop.hpp  mouse.hpp  receiver.hpp  screen_interactive.hpp
Dependencies/win/include/ftxui/dom/: canvas.hpp  deprecated.hpp  direction.hpp  elements.hpp  flexbox_config.hpp  linear_gradient.hpp  node.hpp  requirement.hpp  table.hpp  take_any_args.hpp
Dependencies/win/include/ftxui/screen/: box.hpp  color.hpp  color_info.hpp  screen.hpp  string.hpp  terminal.hpp
Dependencies/win/include/ftxui/util/: autoreset.hpp  ref.hpp
Dependencies/win/lib/cmake/ftxui/: ftxui-config-version.cmake  ftxui-targets-debug.cmake  ftxui-targets.cmake
Dependencies/win/lib/pkgconfig/: ftxui.pc
db/: Alto K10_Alto.txt  Baleno_Nexa.txt  IIIT Nagpur_IIIT.txt  buxa x64_buxa.txt  buxa x86_buxa.txt  buxa.txt  employees.txt  mercedes_maybach.txt  tata_nano.txt  x500_Range Rover.txt
db/preowned/: Alto K10_Ayaan Firoj Khan13.txt
db/reciept/: 133446.txt  161718.txt  284385.txt  368680.txt  371914.txt  591727.txt  982495.txt
db/reciept/preowned/: 284385.txt  713720.txt
include/: Car.h  Humans.h  UI.h  temp.lol  utils.h
src/: Car.cpp  buyCar.cpp  car.cpp  employmentControls.cpp  humans.cpp  main.cpp  mainMenu.cpp  manageremployee.cpp  profileSelect.cpp  profiles.cpp  regCar.cpp  sales.txt  search.cpp  ui.cpp  utils.cpp
